--- a/asset/style.css
+++ b/asset/style.css
@@ -28,12 +28,12 @@
     margin-top: 10px;
 }
 .headerbtn{
-  background-color: #ff6666;
+  background-color: #85ff66;
   color: white;
   border-radius: 5px;
 }
 .headerbtn{
-  border: 1px solid #ff6666 ;
+  border: 1px solid #8fff66 ;
 }
 .sub-heading-content{
     text-align: center;
@@ -273,6 +273,11 @@ background: #fff;
 
 .featured-icon-textbox{
   margin-top: 1rem;
+}
+
+
+a{
+  text-decoration: none;
 }
 /* responsive css */
 
